--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <div id="carrinho"></div>
             <!-- Botão para finalizar o pedido -->
             <button id="finalizarBtn">Finalizar Pedido</button>
+            <!-- Botão para voltar à tela inicial -->
+            <button id="voltarBtnPedido">Voltar</button>
         </section>
 
         <!-- Seção de resumo do pedido (oculto inicialmente) -->
@@ -57,8 +59,21 @@
             <p id="resumoTotal"></p>
             <!-- Mensagem para o cliente se dirigir ao caixa -->
             <p>Por favor, dirija-se ao caixa para realizar o pagamento.</p>
+            <!-- Botão para avaliar o atendimento -->
+            <button id="avaliarBtn">Avaliar Atendimento</button>
             <!-- Botão para voltar à tela inicial -->
             <button id="voltarBtnResumo">Voltar</button>
+        </section>
+
+        <!-- Seção de avaliação (oculto inicialmente) -->
+        <section id="avaliacaoCliente" style="display: none;">
+            <h2>Avaliação</h2>
+            <label for="notaAvaliacao">Nota (0-5):</label>
+            <input type="number" id="notaAvaliacao" min="0" max="5">
+            <label for="comentarioAvaliacao">Comentário (opcional, até 100 caracteres):</label>
+            <textarea id="comentarioAvaliacao" maxlength="100"></textarea>
+            <button id="enviarAvaliacaoBtn">Enviar Avaliação</button>
+            <button id="pularAvaliacaoBtn">Pular Avaliação</button>
         </section>
 
         <!-- Seção de acesso do funcionário (oculto inicialmente) -->
